--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
 <h1>Pages#home</h1>
+
+<nav>
+  <ul>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Cars", cars_path %></li>
+    <li><%= link_to "Bookings", bookings_path %></li>
+    <li><%= link_to "Sign In", new_user_session_path%></li>
+  </ul>
+</nav>
+
+<h1>Welcome to DRIVEBNB</h1>
+<p>Discover the best cars for your trip.</p>
+
+
 <p>Find me in app/views/pages/home.html.erb</p>
