--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Cars#index</h1>
 <p>Find me in app/views/cars/index.html.erb</p>
 
-<ul>
-  <% @cars.each do |car| %>
-    <li>
-      <%= link_to car.make_and_model, car %>
-    </li>
-  <% end %>
-</ul>
+<% @cars.each do |car| %>
+  <div>
+    <h2><%= link_to car.make_and_model, car_path(car) %></h2>
+    <p>Year: <%= car.year %></p>
+    <p>Price: <%= car.price %></p>
+    <p>Available from: <%= car.available_from.strftime("%B %d, %Y") %></p>
+    <p>Available to: <%= car.available_to.strftime("%B %d, %Y") %></p>
+    <p><%= link_to "Book now", new_car_booking_path(car) %></p>
+  </div>
+<% end %>
