--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,2 +1,19 @@
 <h1>Bookings#index</h1>
+
+<h2>Bookings I've made:</h2>
+<ul>
+  <% @user_bookings.each do |booking| %>
+    <li><%= booking.car.name %> - <%= booking.status %></li>
+  <% end %>
+</ul>
+
+<% if current_user.cars.any? %>
+  <h2>Bookings for cars I own:</h2>
+  <ul>
+    <% @owner_bookings.each do |booking| %>
+      <li><%= booking.car.name %> - <%= booking.status %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <p>Find me in app/views/bookings/index.html.erb</p>
