--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -45,7 +45,30 @@
   <p>No bookings found.</p>
 <% end %>
 
+<h2>Feedbacks</h2>
 
+<% if @car.feedbacks.any? %>
+  <table>
+    <thead>
+      <tr>
+        <th>User</th>
+        <th>Rating</th>
+        <th>Content</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @car.feedbacks.each do |feedback| %>
+        <tr>
+          <td><%= feedback.user.email %></td>
+          <td><%= feedback.rating %></td>
+          <td><%= feedback.content %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <p>No feedbacks found.</p>
+<% end %>
 
 
 <%= link_to 'Back', cars_path %>
