--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -5,6 +5,7 @@
   <%= f.input :fuel %>
   <%= f.input :make %>
   <%= f.input :seats %>
+  <%= f.file_field :photo %>
   <%= f.button :submit %>
 <% end %>
 
