--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,16 +1,10 @@
-<%# <style>
-.card {
-  width: 25rem; /* adjust the width to your liking */
-}
-</style> %>
+<h2>Cars:</h2>
 
-<h1>Cars#index</h1>
-
-<div class="row row-cols-1 row-cols-md-4 g-4">
+<div class="row">
   <% @cars.each do |car| %>
-    <div class="col">
-      <div class="card h-100">
-     <%= image_tag(car.image_url, crop: :fill, width: 400, height: 300, gravity: :center, class: "card-img-top") if car.image_url.present? %>
+    <div class="col-md-6 mb-4">
+      <div class="card h-55">
+        <%= image_tag(car.image_url, crop: :fill, width: 800, height: 600, gravity: :center, class: "card-img-top") if car.image_url.present? %>
         <div class="card-body">
           <h5 class="card-title"><%= car.name %></h5>
           <p class="card-text"><strong>Fuel:</strong> <%= car.fuel %></p>
@@ -26,3 +20,9 @@
 <%= link_to 'New Car', new_car_path %>
 
 <p>Find me in app/views/cars/index.html.erb</p>
+
+<style>
+.card {
+  width: 100%; /* adjust the width to your liking */
+}
+</style>
