--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,13 +1,11 @@
-<h1>Feedbacks#new</h1>
 
-<h1>Leave Feedback</h1>
+<h1>Leave Feedback:</h1>
 
 <%= simple_form_for [@booking, @feedback] do |f| %>
   <%= f.input :rating, label: "Rating", collection: 1..5, prompt: "Select a rating" %>
   <%= f.input :content, label: "Feedback" %>
-  <%= f.button :submit, "Submit Feedback" %>
+  <%= f.button :submit, "Submit Feedback", class: 'btn btn-primary' %>
 <% end %>
-
-<%= link_to 'Back', bookings_path %>
-
-<p>Find me in app/views/feedbacks/new.html.erb</p>
+<br>
+<br>
+<%= link_to 'Cancel', bookings_path, class: 'btn btn-outline-danger' %>
