--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,14 +1,12 @@
-<h1>Bookings#new</h1>
+<h1>New Booking:</h1>
 
 
 
 <%= simple_form_for [@car, @booking] do |f| %>
   <%= f.input :date_from, as: :string, input_html: { type: :date } %>
   <%= f.input :date_to, as: :string, input_html: { type: :date } %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
-
-<%= link_to "Cancel", car_path(@car) %>
-
-
-<p>Find me in app/views/bookings/new.html.erb</p>
+<br>
+<br>
+<%= link_to "Cancel", car_path(@car), class: 'btn btn-outline-danger' %>
