--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,15 +1,13 @@
 <!-- app/views/cars/edit.html.erb -->
 
-<h1>Edit Car</h1>
+<h1>Edit Car:</h1>
 
 <%= simple_form_for @car do |f| %>
   <%= f.input :name %>
   <%= f.input :fuel %>
   <%= f.input :make %>
   <%= f.input :seats %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
-
-<%= link_to "Cancel", car_path(@car) %>
-
-<p>Find me in app/views/cars/edit.html.erb</p>
+<br>
+<%= link_to "Cancel", car_path(@car), class: 'btn btn-outline-danger'  %>
