--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -17,9 +17,7 @@
   <% end %>
 </div>
 
-<%= link_to 'New Car', new_car_path %>
-
-<p>Find me in app/views/cars/index.html.erb</p>
+<%= link_to 'New Car', new_car_path, class: 'btn btn-success' %>
 
 <style>
 .card {
