--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,8 +51,10 @@
   <div class="container my-5">
     <div class="row">
       <div class="col-12 col-md-8 mx-auto text-center">
-        <h1>Welcome to DRIVEBNB</h1>
-        <p class="lead">Discover the best famous cars for your trip.</p>
+       <div style="background-color: #f73c2c; border-radius: 10px; padding: 20px;">
+    <h1 style="font-family: Airbnb Cereal App, sans-serif; color: #ffffff; text-align: center;">Welcome to DRIVEBNB</h1>
+    <p class="lead" style="font-family: Airbnb Cereal App, sans-serif; color: #ffffff; text-align: center;">Discover the best famous cars for your trip.</p>
+</div>
       </div>
     </div>
 
